<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/where_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/fira_sans_light"
        android:text="@string/where"
        android:textAlignment="center"
        android:textColor="black"
        android:textSize="25sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/sug_1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/where_title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"

            android:fontFamily="@font/fira_sans_light"
            android:text="Lehrstuhl für Informatik, Campus ..."
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/sug_2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/sug_1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"

            android:fontFamily="@font/fira_sans_light"
            android:text="Mein Zuhause"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sug_2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/fira_sans_light"
        android:inputType="textPostalAddress" />

    <View
        android:id="@+id/divider"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="252dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/divider"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/flex_title"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/fira_sans_light"
        android:text="@string/flex"
        android:textAlignment="center"
        android:textColor="black"

        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/flex_title"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="77dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/flexible_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/fira_sans_light"
            android:text="@string/flexibel"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/semi-flex_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/fira_sans_light"
            android:text="@string/semi_flex"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/on_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/fira_sans_light"
            android:text="@string/on_time"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/superspeed_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/fira_sans_light"
            android:text="@string/superspeed"
            android:textSize="16sp" />
    </RadioGroup>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:focusable="true"
        app:fabSize="normal"
        app:srcCompat="?attr/homeAsUpIndicator" />

</RelativeLayout>